--- a/README.org
+++ b/README.org
@@ -1,7 +1,7 @@
 #+TITLE: emacs-gcc-pgtk - Dockerfile for building emacs.deb with native-comp and pure GTK
 
 * Summary
-This repository shows a Dockerfile to create a emacs deb package with native compilation and pure GTK for Ubuntu 20.10 and Ubuntu 21.04. 
+This repository shows a Dockerfile to create a emacs deb package with native compilation and pure GTK for Ubuntu 21.04. 
 
 ** Notes:
 1. The deb package can be found in [[https://github.com/konstare/emacs-gcc-pgtk/actions/workflows/deploy.yml?query=is%3Acompleted][GitHub Action]].
@@ -9,6 +9,7 @@ This repository shows a Dockerfile to create a emacs deb package with native com
 3. no xwidgets
 4. no imagemagick. Emacs now supports resizing and rotating of images without ImageMagick.
 5. all =.el= files are compiled. ~make NATIVE_FULL_AOT=1~
+6. The emacs is built with sqlite, webp
 ** The package is compiled with flags:
 + --with-native-compilation
 + --with-pgtk
